# Rust_to_JS_FFI

./: .gitignore  Cargo.toml  README.md  config_generator.py  package-lock.json
.github/workflows/: rust.yml
FFI/: Cargo.toml  app.js  package-lock.json
FFI/src/: lib.rs
FFI/src/solvers/: mod.rs  parser.rs  rayon_executor.rs  rayon_worker.rs  simd_executor.rs
casablanca/: Cargo.toml
casablanca/src/solvers/: mod.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/solvers/: simd_executor.rs
fibonachi/: Cargo.toml
hello-word/: README.md  app.js  package.json
js-bindings/: Cargo.toml  README.md  app.js
js-bindings/src/: converter.rs  lib.rs
js-bindings/src/solvers/: mod.rs  simd_executor.rs
python-bindings/: Cargo.toml  app.py  pyproject.toml
python-bindings/.env/: pyvenv.cfg
python-bindings/src/: converter.rs  lib.rs
