[package]
name = "casablanca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
anyhow = "1.0.72"
serde = { version="1.0.183", features = ["derive"] }
serde_json = "1.0.105"
simd-json = "0.10.3"
pyo3 = "0.19.0"

[build]
rustflags = ["-C", "target-cpu=native"]
rustdocflags = ["-C", "target-cpu=native"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+simd128"]

[target.wasm32-wasi]
rustflags = ["-C", "target-feature=+simd128"]