[package]
name = "js-bindings"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
anyhow = "1.0.72"
serde = { version="1.0.183", features = ["derive"] }
serde_json = "1.0.105"
simd-json = "0.10.3"
casablanca = { path = "../casablanca" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
